# themoviedb

./: .gitignore  .travis.yml  CHANGES  CHANGES.md  GNUmakefile  LICENSE  README.md  Setup.hs  TODO.org  cabal.project  default.nix  flake.nix  hie.yaml  shell.nix  stack.yaml  themoviedb-api.cabal  themoviedb.cabal  themoviedb.nix
.github/workflows/: analysis.yml  tests.yml
Network/API/: TheMovieDB.hs
Network/API/TheMovieDB/: Config.hs  Fetch.hs  Generic.hs  HTTP.hs  Search.hs  Types.hs  Util.hs
Network/API/TheMovieDB/Types/: API.hs  Config.hs  Configuration.hs  Context.hs  Genre.hs  Movie.hs  ReleaseDate.hs
Network/TheMovieDB/: API.hs
Test/: TheMovieDB.hs  movie-good.json  search-good.json
example/: Main.hs
nix/: nix-build.sh  sources.json  unstable.nix
src/Network/API/: TheMovieDB.hs
src/Network/API/TheMovieDB/: Action.hs  Actions.hs  Config.hs  Fetch.hs  HTTP.hs  Search.hs  Types.hs  Util.hs
src/Network/API/TheMovieDB/Internal/: Configuration.hs  Date.hs  Generic.hs  HTTP.hs  ReleaseDate.hs  SearchResults.hs  Settings.hs  TheMovieDB.hs  Types.hs
src/Network/API/TheMovieDB/Types/: API.hs  Configuration.hs  Episode.hs  Genre.hs  Movie.hs  Season.hs  TV.hs
test/: Main.hs  MovieTest.hs  TVTest.hs  TestHelper.hs  config-good.json  movie-bad.json  search-good.json  search-tv-good.json  season-good.json  tv-good.json
