-- http://www.haskell.org/cabal/users-guide/developing-packages.html
name:          themoviedb
version:       0.1.0.0
synopsis:      Haskell API bindings for http://themoviedb.org
homepage:      http://github.com/pjones/themoviedb
-- bug-reports:
license:       MIT
license-file:  LICENSE
author:        Peter Jones <pjones@pmade.com>
maintainer:    Peter Jones <pjones@pmade.com>
copyright:     Copyright: (c) 2012 Peter Jones <pjones@pmade.com>
category:      Network, API
stability:     experimental
build-type:    Simple
cabal-version: >=1.8
description:   This library provides functions for retrieving
               metadata from TheMovieDB.org API.

library
  exposed-modules: Network.API.TheMovieDB,
                   Network.API.TheMovieDB.Util
  other-modules:   Network.API.TheMovieDB.Fetch,
                   Network.API.TheMovieDB.Search,
                   Network.API.TheMovieDB.HTTP,
                   Network.API.TheMovieDB.Types,
                   Network.API.TheMovieDB.Types.API,
                   Network.API.TheMovieDB.Types.Config,
                   Network.API.TheMovieDB.Types.Genre,
                   Network.API.TheMovieDB.Types.Movie,
                   Network.API.TheMovieDB.Types.ReleaseDate

  build-depends:
    base ==4.3.*,
    old-locale ==1.0.*,
    time ==1.2.*,
    HTTP ==4000.2.*,
    network ==2.3.*,
    bytestring ==0.9.*,
    text ==0.11.*,
    aeson ==0.6.*,
    unix ==2.4.*

executable tmdb
  main-is: example/Main.hs

  build-depends:
    base,
    unix,
    old-locale,
    time,
    text,
    aeson,
    network,
    HTTP,
    bytestring

source-repository head
  type: git
  location: git://github.com/pjones/themoviedb.git
