--------------------------------------------------------------------------------
name:          themoviedb
version:       0.2.0.0
synopsis:      Haskell API bindings for http://themoviedb.org
homepage:      http://github.com/pjones/themoviedb
bug-reports:   http://github.com/pjones/themoviedb/issues
license:       MIT
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright: (c) 2012-2015 Peter Jones
category:      Network, API
stability:     experimental
tested-with:   GHC == 7.8.3
build-type:    Simple
cabal-version: >=1.10
description:   This library provides functions for retrieving metadata
               from the <http://TheMovieDB.org> API.  Documentation
               can be found in the "Network.API.TheMovieDB" module.

--------------------------------------------------------------------------------
extra-source-files:
  CHANGES
  README.md
  TODO.org
  test/*.json

--------------------------------------------------------------------------------
source-repository head
  type: git
  location: git://github.com/pjones/themoviedb.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual: True
  default: False

--------------------------------------------------------------------------------
library
  exposed-modules:
    Network.API.TheMovieDB
    Network.API.TheMovieDB.Util
    Network.API.TheMovieDB.Config
    Network.API.TheMovieDB.Fetch
    Network.API.TheMovieDB.Search
    Network.API.TheMovieDB.Generic
    Network.API.TheMovieDB.HTTP
    Network.API.TheMovieDB.Types
    Network.API.TheMovieDB.Types.API
    Network.API.TheMovieDB.Types.Configuration
    Network.API.TheMovieDB.Types.Context
    Network.API.TheMovieDB.Types.Genre
    Network.API.TheMovieDB.Types.Movie
    Network.API.TheMovieDB.Types.ReleaseDate

  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-incomplete-uni-patterns
  ghc-prof-options: -prof -auto-all

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: base          >= 4.6   && < 5.0
               , old-locale    >= 1.0   && < 1.1
               , time          >= 1.2   && < 1.6
               , HTTP ==4000.2.*
               , network       >= 2.3   && < 2.7
               , network-uri   >= 2.6   && < 2.7
               , bytestring    >= 0.9   && < 0.11
               , text          >= 0.11  && < 1.3
               , unix          >= 2.5   && < 2.8
               , aeson         >= 0.6   && < 0.9


--------------------------------------------------------------------------------
executable tmdb
  default-language: Haskell2010
  hs-source-dirs: example
  main-is: Main.hs

  ghc-options: -Wall

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: themoviedb, base, unix, old-locale, time,
                 text, aeson, network, HTTP, bytestring

--------------------------------------------------------------------------------
test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    themoviedb,
    base,
    unix,
    old-locale,
    time,
    text,
    aeson,
    network,
    HTTP,
    bytestring,
    HUnit
